<resources>
    <string name="app_name">KAMRA</string>
    <string name="kierunek_0_0">Kierunek: 0.0</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="name">Name</string>
    <string name="zapisz_tekst">zapisz Tekst</string>
    <string name="zapisz_kierunek">zapisz kierunek</string>
    <string name="y">Y:</string>
    <string name="z">Z:</string>
    <string name="x">X:</string>
</resources>
