<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heow2.kamra.MainActivity"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintVertical_bias="1.0"
    tools:ignore="ExtraText">>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0"><![CDATA[>

        ]]>

        <SurfaceView
            android:id="@+id/surfaceView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/kierunek_0_0"
            android:textColor="#FF0066"
            android:layout_marginRight="94dp"
            android:layout_marginEnd="94dp"
            android:layout_below="@+id/imageViewCompass"
            android:layout_alignRight="@+id/imageViewCompass"
            android:layout_alignEnd="@+id/imageViewCompass" />

        <ImageView
            android:id="@+id/imageViewCompass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/compassimg"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            tools:ignore="ContentDescription,RtlHardcoded"
            android:contentDescription="" />

        <Button
            android:id="@+id/zapiszTekst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="buttonSave"
            android:text="@string/zapisz_kierunek"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/xText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="18sp"

            android:textColor="#FF0066"
            android:layout_above="@+id/yText"
            android:layout_alignLeft="@+id/imageViewCompass"
            android:layout_alignStart="@+id/imageViewCompass" />

        <TextView
            android:id="@+id/yText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y"
            android:textSize="18sp"

            android:textColor="#FF0066"

            android:gravity="center"
            android:layout_above="@+id/zText"
            android:layout_toEndOf="@+id/xText"
            android:layout_alignLeft="@+id/xText"
            android:layout_alignStart="@+id/xText" />

        <TextView
            android:id="@+id/zText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z"
            android:textColor="#FF0066"
            android:textSize="18sp"

            tools:ignore="RtlHardcoded"
            android:layout_marginBottom="18dp"
            android:layout_above="@+id/zapiszTekst"
            android:layout_alignLeft="@+id/yText"
            android:layout_alignStart="@+id/yText" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
